--- a/package.yaml
+++ b/package.yaml
@@ -63,5 +63,7 @@ tests:
     main: Spec.hs
     source-dirs: test
     dependencies:
+      - QuickCheck
       - hspec
       - pdup
+      - quickcheck-instances
